# home-automation

./: README.md  app_tasks.html  button__task_8c.html  button__task_8c.tex  dir_17576f26408c9e64792276bdce2ed348.html  dir_46b1d13e6fcba98fd2e71bf96a4c2d62.html  dir_6d85ffdb6ddc65a33ae1e5614f926abe.html  dir_7a50c7b94629e0102d2e4dc953f3690e.html  display__task.html  display__task_8c.tex  doc_html  files.html  files.tex  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  lamp__task.html  lamp__task_8c.tex  main.html  main_8c.tex  mqtt__task.html  mqtt__task_8c.tex  refman.tex  sensor__task.html  sensor__task_8c.tex
home-automation-esp/: CMakeLists.txt
home-automation-esp/components/app_tasks/: CMakeLists.txt  button_task.c  display_task.c  lamp_task.c  mqtt_task.c  sensor_task.c
home-automation-esp/components/app_tasks/include/: app_tasks.h
home-automation-esp/components/dht11/: CMakeLists.txt
home-automation-esp/components/dht11/include/: dht_espidf.h
home-automation-esp/components/dht11/src/: dht_espidf.c
home-automation-esp/components/oled/: CMakeLists.txt  OLEDDisplay.c
home-automation-esp/components/wifi_conn/: CMakeLists.txt  wifi_conn.c
home-automation-esp/components/wifi_conn/include/: wifi_conn.h
home-automation-esp/main/: Kconfig.projbuild  main.c
home-automation-esp32/: CMakeLists.txt
